methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:26: error: not found: value prendBicsuit
  prendBicsuit()
  ^