methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    do { 
      avance()
      if (getCouleurSol()==Color.green){
        recule()
        avance()}
      else {
        right()
        avance()
        if (getCouleurSol()==Color.green){
          recule()
          avance()}
        else {
          gauche()
          gauche()
          avance()
        }


      }


    } while(estSurBiscuit==false)

  prendBicsuit()
  }
